==> JoseMartel/LIS3DH-ESP-IDF/lis3dh.c <==
#include <stdint.h>
#include <stdio.h>
#include <stdbool.h>
#include <string.h>
#include "driver/i2c.h"
#include "driver/spi_master.h"
#include "esp_err.h"
#include "esp_log.h"
#include "hal/gpio_types.h"
#include "hal/i2c_types.h"
#include "lis3dh.h"

u8_t LIS3DH_ReadReg(u8_t Reg, u8_t *Data) {

//   //To be completed with either I2c or SPI reading function
//   //i.e. *Data = SPI_Mems_Read_Reg( Reg );  

  bool success = false;
  uint8_t value[1] = {0};

  success = !(bool)i2c_master_write_read_device(I2C_MASTER_NUM, LIS3DH_MEMS_I2C_ADDRESS, &Reg, sizeof(value), value, 1, 1000 / portTICK_PERIOD_MS);
  Data[0] = value[0];

	if (!success) {
		// printf("Error reading LIS3DH %02x register\n", Reg);
		return success;
	} else {
		// LOG_DBG("Getting LIS3DH %02x register OK\n", Reg);
		return success;
	}

}

u8_t LIS3DH_WriteReg(u8_t WriteAddr, u8_t Data) {
  //To be completed with either I2c or SPI writing function
  //i.e. SPI_Mems_Write_Reg(WriteAddr, Data);
    
	esp_err_t success = false;
  uint8_t send[2] = {WriteAddr, Data};

  // success = i2c_master_write_to_device(I2C_MASTER_NUM, LIS3DH_MEMS_I2C_ADDRESS, cmd, sizeof(cmd), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);
  i2c_cmd_handle_t cmd;
  cmd = i2c_cmd_link_create();
  i2c_master_start(cmd);
  i2c_master_write_byte(cmd, (LIS3DH_MEMS_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, 1);
  i2c_master_write(cmd, send,sizeof(send),1);
  i2c_master_stop(cmd);   
  success = !(bool)i2c_master_cmd_begin(I2C_MASTER_NUM, cmd, 1000/portTICK_PERIOD_MS);
  // if (success != 0) ESP_LOGE("I2C","%d:%s",success,esp_err_to_name(success));
  i2c_cmd_link_delete(cmd);

	if (!success) {
		return 0;
	} else {
		return 1;
	}

}

status_t LIS3DH_GetTempRaw(i8_t* buff) {
  u8_t valueL = 0;
  u8_t valueH = 0;
  
  if( !LIS3DH_ReadReg(LIS3DH_OUT_3_L, &valueL) )
    return MEMS_ERROR;
  
  if( !LIS3DH_ReadReg(LIS3DH_OUT_3_H, &valueH) )
    return MEMS_ERROR;
  
  *buff = (i8_t)( valueH );
  
  return MEMS_SUCCESS;  
}

status_t LIS3DH_GetAccAxes(AxesAccel_t *accel) {
  uint16_t value;
  u8_t *valueL = (u8_t *)(&value);
  u8_t *valueH = ((u8_t *)(&value)+1);
  AxesRaw_t buff;

  if( !LIS3DH_ReadReg(LIS3DH_OUT_X_L, valueL) )
    return MEMS_ERROR;

  if( !LIS3DH_ReadReg(LIS3DH_OUT_X_H, valueH) )
    return MEMS_ERROR;

  buff.AXIS_X = value;

  if( !LIS3DH_ReadReg(LIS3DH_OUT_Y_L, valueL) )
    return MEMS_ERROR;

  if( !LIS3DH_ReadReg(LIS3DH_OUT_Y_H, valueH) )
    return MEMS_ERROR;

  buff.AXIS_Y = value;

  if( !LIS3DH_ReadReg(LIS3DH_OUT_Z_L, valueL) )
    return MEMS_ERROR;

  if( !LIS3DH_ReadReg(LIS3DH_OUT_Z_H, valueH) )
    return MEMS_ERROR;

  buff.AXIS_Z = value;

  accel->axis_x = (((float)buff.AXIS_X)/LIS3DH_ACCEL_SCALE_MODIFIER_8G) * 1000;
  accel->axis_y = (((float)buff.AXIS_Y)/LIS3DH_ACCEL_SCALE_MODIFIER_8G) * 1000;
  accel->axis_z = (((float)buff.AXIS_Z)/LIS3DH_ACCEL_SCALE_MODIFIER_8G) * 1000;

  return MEMS_SUCCESS; 
}
