==> uraich/rak811Demos/Rak811_lis3dh/Src/lis3dh/lis3dh.c <==
#include "lis3dh.h"
#define FIFO_STREAM_MODE
#define LIS3DH_ODR_FREQ     LIS3DH_ODR_10Hz
#define ASSERT(_cond_)

bool LIS3DH_ReadReg(uint8_t Reg, uint8_t* Data)
{
	HAL_StatusTypeDef retCode;
	retCode = HAL_I2C_Mem_Read(&hi2c1, LIS3DH_MEMS_I2C_ADDRESS, Reg, 1, Data, 1, 100);

#ifdef DEBUG
	printf("LIS3DH_ReadReg: reg_addr= 0x%02x\r\n", Reg);
#endif
	if (retCode != HAL_OK) {
		printf("LIS3DH no ack\r\n");
	}

	return true;
}

uint8_t LIS3DH_WriteReg(uint8_t Reg, uint8_t Data)
{
	HAL_StatusTypeDef retCode;

	retCode =  HAL_I2C_Mem_Write( &hi2c1, 0x32, Reg, 1, (uint8_t *)&Data, 1, 100 );
#ifdef DEBUG
	printf("LIS3DH_WriteReg: reg_addr = 0x%02x, data = 0x%2x\r\n", Reg, Data);
#endif
	if (retCode !=HAL_OK) {
		printf("LIS3DH no ack\r\n");
	}

	return true;
}

status_t LIS3DH_GetTempRaw(int8_t* buff)
{
	uint8_t valueL;
	uint8_t valueH;

	if( !LIS3DH_ReadReg(LIS3DH_OUT_3_L, &valueL) ) {
		printf("LIS3DH_GetTempRaw: Error reading LIS3DH_OUT_3_L\r\n");
		return MEMS_ERROR;
	}
	if( !LIS3DH_ReadReg(LIS3DH_OUT_3_H, &valueH) ) {
		printf("LIS3DH_GetTempRaw: Error reading LIS3DH_OUT_3_H\r\n");
		return MEMS_ERROR;
	}
#define DEBUG
#ifdef DEBUG
	printf("LIS3DH_GetTempRaw: valueH:0x%02x, valueL: 0x%02x\r\n",valueH,valueL);
	printf("LIS3DH_GetTempRaw: valueH:%d, valueL: %d\r\n",(int8_t)valueH,(int8_t)valueL);
#endif
#undef DEBUG
	*buff = (int8_t)( valueH + LIS3DH_TEMPERATURE_OFFSET);

	return MEMS_SUCCESS;
}

status_t LIS3DH_GetAccAxes(AxesRaw_t* buff)
{
	AxesRaw_t lis3dhAxes;
	status_t retCode;
	uint8_t lis3dhResolution;

	if ((retCode = LIS3DH_GetAccAxesRaw(&lis3dhAxes)) != MEMS_SUCCESS)
		return retCode;
	if ((retCode = LIS3DH_ReadReg(LIS3DH_CTRL_REG1,&lis3dhResolution)) != MEMS_SUCCESS)
		return retCode;
	if ((lis3dhResolution & LIS3DH_LPEN)) {
	/* low power and low 8 bit resolution mode */
		buff->AXIS_X = lis3dhAxes.AXIS_X >>= 8;
		buff->AXIS_Y = lis3dhAxes.AXIS_Y >>= 8;
		buff->AXIS_Z = lis3dhAxes.AXIS_Z >>= 8;
		return retCode;
	}

	if ((retCode = LIS3DH_ReadReg(LIS3DH_CTRL_REG4,&lis3dhResolution)) != MEMS_SUCCESS)
		return retCode;
	if ((lis3dhResolution & LIS3DH_HR)) {
		/* high 12 bit resolution mode */
		buff->AXIS_X = lis3dhAxes.AXIS_X >>= 4;
		buff->AXIS_Y = lis3dhAxes.AXIS_Y >>= 4;
		buff->AXIS_Z = lis3dhAxes.AXIS_Z >>= 4;
		return retCode;
	}
	/* normal 10 bit resolution */
	buff->AXIS_X = lis3dhAxes.AXIS_X >>= 6;
	buff->AXIS_Y = lis3dhAxes.AXIS_Y >>= 6;
	buff->AXIS_Z = lis3dhAxes.AXIS_Z >>= 6;
	return retCode;
}
